# lex-machina

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  Cargo.toml  ML_INTEGRATION_PLAN.md  NOTES.md  PLAN.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/_workflows/: rust.yml
.github/workflows/: rust.yml
app/: globals.css  layout.tsx  page.tsx
app/analysis/: page.tsx
app/data/: page.tsx
app/home/: page.tsx
app/ml/: page.tsx
app/processing/: page.tsx
app/settings/: page.tsx
app/visualizations/: page.tsx
components/analysis/: analysis-associations.tsx  analysis-column-detail.tsx  analysis-columns.tsx  analysis-correlations.tsx  analysis-heatmap.tsx  analysis-missingness.tsx  analysis-overview.tsx  analysis-quality.tsx  analysis-sidebar.tsx  analysis-workspace.tsx  index.tsx  plot-figure.tsx
components/data-grid/: data-grid.tsx  grid-body.tsx  grid-cell.tsx  grid-header.tsx  index.tsx  processed-data-grid.tsx  use-grid-data.ts  use-grid-scroll.ts
components/home/: home-main-content.tsx  home-sidebar.tsx  index.tsx  logo.tsx
components/layout/: app-shell.tsx  context-sidebar.tsx  nav-sidebar.tsx  sidebar-nav.tsx  sidebar.tsx  status-bar.tsx  toolbar.tsx
components/ml/: index.ts  ml-content.tsx  ml-inspector-panel.tsx  ml-operations-sidebar.tsx  ml-prediction-panel.tsx  ml-results-panel.tsx  ml-setup-panel.tsx  ml-sidebar.tsx  prediction-panel.tsx  training-history.tsx
components/preprocessing/: column-selector.tsx  config-panel.tsx  dataset-preview.tsx  history-list.tsx  index.tsx  progress-panel.tsx  results-panel.tsx  row-range-selector.tsx
components/processing/: column-selector.tsx  columns-panel.tsx  config-panel-wrapper.tsx  context.tsx  empty-state.tsx  history-list.tsx  index.tsx  layout.tsx  progress-panel.tsx  results-panel-wrapper.tsx  results-panel.tsx  row-range-selector.tsx  sidebar.tsx  toolbar.tsx
components/settings/: ai-provider-config.tsx  index.tsx  nav-position-selector.tsx  theme-selector.tsx
components/ui/: button.tsx  card.tsx  checkbox.tsx  external-link.tsx  input.tsx  progress-bar.tsx  resize-handle.tsx  scrollbar.tsx  select.tsx  slider.tsx  tabs.tsx  toast.tsx  toggle.tsx
components/visualizations/: visualization-card.tsx  visualizations-grid.tsx  visualizations-sidebar.tsx
crates/lex-learning/: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
crates/lex-learning/.cargo/: config.toml
crates/lex-learning/python/lex_learning/: README.md  cli.py  pyproject.toml  requirements.txt
crates/lex-learning/python/lex_learning/src/: __init__.py  config.py  errors.py
crates/lex-learning/python/lex_learning/src/core/: __init__.py  metrics.py  protocols.py  types.py
crates/lex-learning/python/lex_learning/src/explainability/: __init__.py  explainer.py  plots.py  shap_strategies.py
crates/lex-learning/python/lex_learning/src/inference/: __init__.py  artifact.py  model.py
crates/lex-learning/python/lex_learning/src/models/: __init__.py  boosting.py  neural.py  sklearn_models.py
crates/lex-learning/python/lex_learning/src/pipeline/: __init__.py  orchestrator.py  stages.py
crates/lex-learning/python/lex_learning/src/preprocessing/: __init__.py  preprocessor.py
crates/lex-learning/python/lex_learning/src/progress/: __init__.py  reporter.py
crates/lex-learning/python/lex_learning/src/training/: __init__.py  optimizer.py  selector.py  trainer.py
crates/lex-learning/python/lex_learning/tests/: __init__.py  conftest.py  test_config.py  test_explainer.py  test_inference.py  test_pipeline.py  test_preprocessor.py  test_trainer.py
crates/lex-learning/src/: cancellation.rs  config.rs  error.rs  lib.rs  model.rs  pipeline.rs  progress.rs  types.rs
crates/lex-learning/src/python/: callback.rs  conversion.rs  embedded.rs  mod.rs  runtime.rs
crates/lex-processing/: .gitignore  Cargo.toml
crates/lex-processing/output/: processed_dataset_classification.csv
crates/lex-processing/src/: config.rs  error.rs  lib.rs  main.rs  types.rs  utils.rs
crates/lex-processing/src/ai/: gemini.rs  mod.rs  openrouter.rs  provider.rs
crates/lex-processing/src/cleaner/: converters.rs  mod.rs  sanitizers.rs  type_corrector.rs
crates/lex-processing/src/decisions/: ai_engine.rs  mod.rs  rule_engine.rs
crates/lex-processing/src/imputers/: knn.rs  mod.rs  statistical.rs
crates/lex-processing/src/pipeline/: builder.rs  executor.rs  mod.rs  outliers.rs  progress.rs
crates/lex-processing/src/profiler/: mod.rs  role_inference.rs  statistics.rs  type_inference.rs
crates/lex-processing/src/quality/: analyzer.rs  mod.rs
crates/lex-processing/src/reporting/: generator.rs  mod.rs
crates/lex-processing/tests/: integration_tests.rs
crates/lex-processing/tests/fixtures/: all_nulls_column.csv  mixed_types.csv  no_nulls.csv  single_row.csv  titanic_subset.csv
lib/: utils.ts
lib/contexts/: sidebar-context.tsx
lib/hooks/: use-analysis-columns-view.ts  use-analysis-heatmap.ts  use-analysis-ui-state.ts  use-analysis.ts  use-app-status.ts  use-file-state.ts  use-ml-ui-state.ts  use-ml.ts  use-preprocessing.ts  use-processed-data.ts  use-processing-ui-state.ts  use-rust-event.ts  use-settings.ts  use-theme.ts  use-visualizations-ui-state.ts  use-visualizations.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: analysis.rs  dataframe.rs  dialog.rs  file_io.rs  keyring.rs  ml.rs  mod.rs  preprocessing.rs  settings.rs  ui.rs
types/: index.ts
