[package]
name = "lex_machina"
version = "0.1.0"
description = "TODO: Add description"
authors = ["sshussh"]
edition = "2024"
rust-version = "1.94.0"

[lib]                                           # Library configuration
name = "lex_machina_lib"                        # Name of the library
crate-type = ["staticlib", "cdylib", "rlib"]    # Types of libraries to produce

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# workspace dependencies
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
log.workspace = true

# tauri-specific
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# internal crates
lex-processing = { path = "../crates/lex-processing" }
