[package]
name = "lex_machina"
version = "0.1.0"
description = "TODO: Add description"
authors = ["sshussh"]
edition = "2024"
rust-version = "1.92.0"

[lib]                                           # Library configuration
name = "lex_machina_lib"                        # Name of the library
crate-type = ["staticlib", "cdylib", "rlib"]    # Types of libraries to produce

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# workspace dependencies
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
log.workspace = true
chrono.workspace = true

# tauri-specific
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"

# internal crates
lex-processing = { path = "../crates/lex-processing" }
lex-learning = { path = "../crates/lex-learning" }
tauri-plugin-store = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-opener = "2"
anofox-statistics = "0.4.1"
normality = "3.0.0"
statrs = "0.18"
