[package]
name = "lex-processing"
version = "0.1.0"
edition = "2024"
description = "AI-optional data processing library for machine learning pipelines"
readme = "README.md"
keywords = ["data-processing", "machine-learning", "polars", "automl"]
categories = ["science", "data-structures"]
rust-version = "1.92.0"

[lib]
name = "lex_processing"

[[bin]]
name = "lex-processing"
path = "src/main.rs"

[dependencies]
# inherit from workspace
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true

# optional workspace dependencies (for AI feature)
tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# processing-specific deps (not shared with Tauri)
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
regex = "1.12"
once_cell = "1.21"
rand = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
static_assertions = "1.1"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["ai"]
ai = ["reqwest", "tokio"]
