[project]
name = "lex_learning"
version = "0.1.0"
description = "Automated Machine Learning training library with explainability"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Montaser Amoor" },
    { name = "Rita Basbous" },
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=0.20",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "tensorflow>=2.15",
    "optuna>=3.5",
    "shap>=0.44",
    "matplotlib>=3.8",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pytest-cov>=6.0",
    "pytest>=9.0.2",
]

# [project.scripts]
# lex-learning = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line too long

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
lex_learning = "src"
